jvm 提交